--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.3.0",
-    "@ionic/react": "^5.0.7",
-    "@ionic/react-router": "^5.0.7",
+    "@capacitor/ios": "^2.3.0",
+    "@ionic/react": "^5.2.3",
+    "@ionic/react-router": "^5.2.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
